修改主页、增加新建项目页面

--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -1,7 +1,4 @@
-{% extends "layout/layout.html" %} {% block script %}
-<script>
-    $('.nav1').toggleClass('active');
-</script> {% endblock %} {% block content %}
+{% extends "layout/layout.html" %} {% block content %}
 
 <!-- <div class="center">
     <video src="/static/img/test4.mp4" width=100% controls="controls">
@@ -14,3 +11,8 @@
 
 
 {% endblock %}
+
+{% block script %}
+<script>
+    $('.nav1').toggleClass('active');
+</script> {% endblock %}
