--- a/application/templates/layout/header.html
+++ b/application/templates/layout/header.html
@@ -13,22 +13,22 @@
                     <li class="nav1">
                         <a class="black-text" href="/">首页</a>
                     </li>
-                    <li>
+                    <li class="nav1">
                         <a class="black-text" href="/projects.html">更多项目</a>
                     </li>
-                    <li>
-                        <a class="black-text" href="/new_projects.html">发起项目</a>
+                    <li class="nav3">
+                        <a class="black-text" href="/add_project">发起项目</a>
                     </li>
-                    <li>
+                    <li class="nav4">
                         <a class="black-text" href="/help.html">我的U圈</a>
                     </li>
-                    <li>
+                    <li class="nav5">
                         <a class="black-text" href="/about.html">关于我们</a>
                     </li>
-                    <li>
+                    <li class="nav6">
                         <a class="black-text" href="/help.html">帮助中心</a>
                     </li>
-                    <li>
+                    <li class="nav7">
                         <a href="javascript:;">
                             <i class="material-icons black-text">search</i>
                         </a>
