--- a/application/templates/layout/project-card.html
+++ b/application/templates/layout/project-card.html
@@ -37,7 +37,7 @@
         </div>
 
         {% else %}
-        <div class="card-content valign-wrapper" style="height:582.5px;background: url(/static/img/more.jpg) no-repeat">
+        <div class="card-content valign-wrapper" style="height:582.5px;background: url(/static/img/more.jpg) no-repeat center center">
         </div>
         {% endif %}
     </div>
