--- a/application/static/css/local.css
+++ b/application/static/css/local.css
@@ -56,3 +56,8 @@ footer a:hover{
     padding: 10px;
     color: #066008 !important;
 }
+
+.input-field .hint{
+    font-size: 12px;
+    color: #ccc;
+}
