--- a/application/templates/addon/map-show.html
+++ b/application/templates/addon/map-show.html
@@ -1,3 +1,4 @@
+{% if pos %}
 <script type="text/javascript" src="http://api.map.baidu.com/api?v=1.2"></script>
 
 <div id="container" style="height:500px;width:500px"></div>
@@ -24,3 +25,4 @@
     //     console.log("(", pos.lng, ",", pos.lat, ")")
     // });
 </script>
+{% endif %}
