--- a/application/templates/layout/layout.html
+++ b/application/templates/layout/layout.html
@@ -2,7 +2,8 @@
 <html>
 
     <head>
-        <title>3U旅游众筹</title>
+
+        <title>{% block title %}3U旅游众筹{% endblock %}</title>
         {% include './layout/head.html' %}
 
     </head>
