upload and config

--- a/application/templates/add_project.html
+++ b/application/templates/add_project.html
@@ -12,6 +12,13 @@
                 </div>
 
                 <div class="row">
+                        <div class="input-field col s12">
+                            <input value="" id="img" type="text" class="validate">
+                            <label for="img">标题图片</label>
+                        </div>
+                    </div>
+
+                <div class="row">
                     <div class="input-field col s12">
                         <textarea id="abstract" class="materialize-textarea" length="90"></textarea>
                         <label for="abstract">项目自述</label>
