--- a/application/static/css/local.css
+++ b/application/static/css/local.css
@@ -22,7 +22,7 @@ body{
 .bold{
     font-weight: bold;
 }
-nav ul a {
+nav ul.mainnav a {
     font-family: "幼圆";
     font-weight: bold;
     font-size: large ;
