--- a/application/templates/layout/footer.html
+++ b/application/templates/layout/footer.html
@@ -2,9 +2,9 @@
     <div class="container">
         <div class="row">
             <div class="center black-text">
-                <a href="/">联系我们</a>|
-                <a href="/">服务协议</a>|
-                <a href="/">加入我们</a>
+                <a href="/contact/">联系我们</a>|
+                <a href="/agreement/">服务协议</a>|
+                <a href="/join/">加入我们</a>
             </div>
         </div>
     </div>
