--- a/application/templates/config.html
+++ b/application/templates/config.html
@@ -62,8 +62,9 @@
                     <div class="row">
                         <div class="col l12 input-field">
                             <i class="material-icons prefix">face</i>
-                            <input id="realname" name="realname" type="text" class="validate" value="{{ session['user']['realname'] }}">
+                            <input id="realname" name="realname" type="text" class="validate" value="{{ session['user']['realname'] }}" {% if session['user']['usergroup']=='2' %}disabled{% endif %} >
                             <label for="realname">真实姓名</label>
+                            {% if session['user']['usergroup']=='2' %}<span class="green-text">已实名认证</span>{% endif %}
                         </div>
                     </div>
 
