--- a/application/templates/layout/header.html
+++ b/application/templates/layout/header.html
@@ -14,22 +14,22 @@
                         <a class="black-text" href="/">首页</a>
                     </li>
                     <li class="nav2">
-                        <a class="black-text" href="/projects.html">更多项目</a>
+                        <a class="black-text" href="/projects">更多项目</a>
                     </li>
                     <li class="nav3">
                         <a class="black-text" href="/add_project">发起项目</a>
                     </li>
                     <li class="nav4">
-                        <a class="black-text" href="/help.html">我的U圈</a>
+                        <a class="black-text" href="/help">我的U圈</a>
                     </li>
                     <li class="nav5">
-                        <a class="black-text" href="/about.html">关于我们</a>
+                        <a class="black-text" href="/about">关于我们</a>
                     </li>
                     <li class="nav6">
-                        <a class="black-text" href="/help.html">帮助中心</a>
+                        <a class="black-text" href="/help">帮助中心</a>
                     </li>
                     <li class="nav7">
-                        <a href="javascript:;">
+                        <a href="/search">
                             <i class="material-icons black-text">search</i>
                         </a>
                     </li>
@@ -107,22 +107,22 @@
             <a class="black-text" href="/">首页</a>
         </li>
         <li class="nav2">
-            <a class="black-text" href="/projects.html">更多项目</a>
+            <a class="black-text" href="/projects">更多项目</a>
         </li>
         <li class="nav3">
             <a class="black-text" href="/add_project">发起项目</a>
         </li>
         <li class="nav4">
-            <a class="black-text" href="/help.html">我的U圈</a>
+            <a class="black-text" href="/help">我的U圈</a>
         </li>
         <li class="nav5">
-            <a class="black-text" href="/about.html">关于我们</a>
+            <a class="black-text" href="/about">关于我们</a>
         </li>
         <li class="nav6">
-            <a class="black-text" href="/help.html">帮助中心</a>
+            <a class="black-text" href="/help">帮助中心</a>
         </li>
         <li class="nav7">
-            <a href="javascript:;">
+            <a href="/search">
                 <i class="material-icons black-text">search</i>
             </a>
         </li>
